--- a/Languages/English/Keyed/RimRound_Keys.xml
+++ b/Languages/English/Keyed/RimRound_Keys.xml
@@ -74,6 +74,7 @@
 	<RR_Mtw_nutritionPerLevel>Nutrition required per level</RR_Mtw_nutritionPerLevel>
 	<RR_Mtw_levelsGainedPerLevel>Levels gained on level up</RR_Mtw_levelsGainedPerLevel>
 	<RR_Mtw_MinimumAgeForCustomBody>Min. age for RR bodies</RR_Mtw_MinimumAgeForCustomBody>
+	<RR_Mtw_minWeightToThrowText>Min. weight gain to throw text</RR_Mtw_minWeightToThrowText>
 
 	<RR_Mtw_BodyChangeExemptionSettingsTitle>Body Change Settings</RR_Mtw_BodyChangeExemptionSettingsTitle>
 	<RR_Mtw_BodyChangeExemptionSettings_Male>Dynamic bodies for Males</RR_Mtw_BodyChangeExemptionSettings_Male>
