Add mod extension for UltraTech textiles Make new clothing items' effects as specified in the mod extension work Move patches to folders

--- a/Languages/English/Keyed/RimRound_Keys.xml
+++ b/Languages/English/Keyed/RimRound_Keys.xml
@@ -2,7 +2,7 @@
 
 <LanguageData>
 	<StatPart_MeatYieldBodyFatExplanation>Multiplier for body weight: {0}</StatPart_MeatYieldBodyFatExplanation>
-
+	<StatPart_RR_ClothingBonusExplanation>UltraTech Clothing: {0}</StatPart_RR_ClothingBonusExplanation>
 
 	<!--Alerts-->
 	<NeedFoodHopperProcessorDesc>You have a food processor with no hopper next to it.\n\nTo work, food processors must draw from an adjacent hopper filled with raw food.\n\nBuild a hopper adjacent to the processor.</NeedFoodHopperProcessorDesc>
